syntax = "proto3";
package tutorial; // todo rename and re gen to be different package

import "google/protobuf/empty.proto";

import "google/protobuf/descriptor.proto";

option go_package = "github.com/lcmaguire/protoc-gen-go-goo/examplefirebase/sample";

// todo make AIP approved
service ExampleService {
    rpc CreateExample(Example) returns (Example) {
        option (my_method_option).bar = "Some string";
    };
    rpc GetExample(GetExampleRequest) returns (Example);
    rpc ListExamples(ListExampleRequest) returns (ListExampleResponse);
    rpc UpdateExample(Example) returns (Example);
    rpc DeleteExample(DeleteExampleRequest) returns (google.protobuf.Empty);
}

message Example {
    string name = 1;
    string display_name = 2 [json_name="displayName"];
}

message GetExampleRequest {
    string name = 1;
}

message DeleteExampleRequest {
    string name = 1;
}

message ListExampleRequest {
}

message ListExampleResponse {
    repeated Example examples = 1;
}

// https://developers.google.com/protocol-buffers/docs/proto#customoptions for custom options

extend google.protobuf.MessageOptions {
    optional string my_option = 51234;
}
  
extend google.protobuf.MethodOptions {
    optional MyMethodDesc my_method_option = 50007;
  }


message MyMethodDesc {
    optional string bar = 2;
}

message MyMessage {
    option (my_option) = "Hello world!";
}